RESOLVED FIXED110702
[GTK] GTK+ 2 build broken since GTK_API_VERSION_2 moved to autoconfig.h
https://bugs.webkit.org/show_bug.cgi?id=110702
Summary [GTK] GTK+ 2 build broken since GTK_API_VERSION_2 moved to autoconfig.h
Gustavo Noronha (kov)
Reported 2013-02-23 18:30:26 PST
[GTK] GTK+ 2 build broken since GTK_API_VERSION_2 moved to autoconfig.h
Attachments
Patch (1.22 KB, patch)
2013-02-23 18:32 PST, Gustavo Noronha (kov)
no flags
Patch (1.23 KB, patch)
2013-02-23 18:42 PST, Gustavo Noronha (kov)
no flags
Patch (17.03 KB, patch)
2013-02-24 07:59 PST, Gustavo Noronha (kov)
mrobinson: review+
Gustavo Noronha (kov)
Comment 1 2013-02-23 18:32:27 PST
WebKit Review Bot
Comment 2 2013-02-23 18:34:46 PST
Attachment 189948 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/gtk/GtkVersioning.c']" exit_code: 1 Source/WebCore/platform/gtk/GtkVersioning.c:21: Found other header before WebCore config.h. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gustavo Noronha (kov)
Comment 3 2013-02-23 18:42:25 PST
Gustavo Noronha (kov)
Comment 4 2013-02-24 07:59:43 PST
Martin Robinson
Comment 5 2013-02-24 09:17:36 PST
Comment on attachment 189977 [details] Patch Thanks for the fix. Minor nit is that usually there is no blank line after the first include.
Gustavo Noronha (kov)
Comment 6 2013-02-24 09:49:54 PST
Gustavo Noronha (kov)
Comment 7 2013-02-24 10:10:50 PST
Nice sed trick I used to fix the nit: sed -i 'N;N;s/#include "autotoolsconfig.h"\n\n/#include "autotoolsconfig.h"\n/' *.c
Note You need to log in before you can comment on or make changes to this bug.