[GTK] GTK+ 2 build broken since GTK_API_VERSION_2 moved to autoconfig.h https://bugs.webkit.org/show_bug.cgi?id=110702

Reviewed by Martin Robinson.

Source/WebCore:

No tests. Build fix, no behaviour change.

* platform/gtk/GtkVersioning.h: include the autotoolsconfig.h header,
which contains the GTK_API_VERSION_2 define now.

Source/WebKit/gtk:

* tests/testapplicationcache.c: include autotoolsconfig.h.
* tests/testatk.c: ditto.
* tests/testatkroles.c: ditto.
* tests/testcontextmenu.c: ditto.
* tests/testcopyandpaste.c: ditto.
* tests/testdomdocument.c: ditto.
* tests/testdomdomwindow.c: ditto.
* tests/testdomnode.c: ditto.
* tests/testdownload.c: ditto.
* tests/testfavicondatabase.c: ditto.
* tests/testglobals.c: ditto.
* tests/testhittestresult.c: ditto.
* tests/testhttpbackend.c: ditto.
* tests/testkeyevents.c: ditto.
* tests/testloading.c: ditto.
* tests/testmimehandling.c: ditto.
* tests/testnetworkrequest.c: ditto.
* tests/testnetworkresponse.c: ditto.
* tests/testwebbackforwardlist.c: ditto.
* tests/testwebdatasource.c: ditto.
* tests/testwebframe.c: ditto.
* tests/testwebhistoryitem.c: ditto.
* tests/testwebinspector.c: ditto.
* tests/testwebplugindatabase.c: ditto.
* tests/testwebresource.c: ditto.
* tests/testwebsettings.c: ditto.
* tests/testwebview.c: ditto.
* tests/testwindow.c: ditto.

Tools:

* GtkLauncher/main.c: include autotoolsconfig.h.
* Scripts/webkitpy/style/checker.py: make GtkLauncher/main.c exempt of
the include ordering check, since it uses autotoolsconfig.h which needs to
come first.

Canonical link: https://commits.webkit.org/128992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143869 268f45cc-cd09-0410-ab3c-d52691b4dbfc