Source/WebKit/gtk/tests/testatkroles.c
@@ -18,6 +18,7 @@
  * Boston, MA 02110-1301, USA.
  */
 
+#include "autotoolsconfig.h"
 #include <glib.h>
 #include <glib/gstdio.h>
 #include <gtk/gtk.h>
