Source/WebKit/gtk/tests/testdomdocument.c
@@ -17,6 +17,7 @@
  * Boston, MA 02110-1301, USA.
  */
 
+#include "autotoolsconfig.h"
 #include "test_utils.h"
 
 #include <glib.h>
