Source/WebKit/gtk/tests/testwebplugindatabase.c
@@ -17,6 +17,7 @@
  * Boston, MA 02110-1301, USA.
  */
 
+#include "autotoolsconfig.h"
 #include <errno.h>
 #include <glib.h>
 #include <glib/gstdio.h>
