Source/WebKit/gtk/tests/testwebresource.c
@@ -17,6 +17,7 @@
  * Boston, MA 02110-1301, USA.
  */
 
+#include "autotoolsconfig.h"
 #include <glib.h>
 #include <gtk/gtk.h>
 #include <libsoup/soup.h>
